--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
                  <li>
                     <a href="allElections.html"><i class="fa fa-edit "></i>All Elections</a>
                 </li>
+                <li>
+                   <a href="myElections.html"><i class="fa fa-folder-open "></i>My Elections</a>
+               </li>
                    <li>
                       <a href="changePassword.html"><i class="fa fa-lock "></i>Change Password</a>
                   </li>
