--- a/changePassword.html
+++ b/changePassword.html
@@ -71,6 +71,9 @@
                  <li>
                     <a href="allElections.html"><i class="fa fa-edit "></i>All Elections</a>
                 </li>
+                <li>
+                   <a href="myElections.html"><i class="fa fa-folder-open "></i>My Elections</a>
+               </li>
                    <li class="active-link">
                       <a href="#"><i class="fa fa-lock "></i>Change Password</a>
                   </li>
